[gd_scene load_steps=7 format=4 uid="uid://dj8il2mlhord6"]

[ext_resource type="Script" path="res://Scripts/MenuSwitcher.gd" id="1_2438t"]
[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_gty37"]
[ext_resource type="PackedScene" uid="uid://bdg5ibh43a2wl" path="res://Scenes/UI/Credits.tscn" id="2_gforu"]
[ext_resource type="Theme" uid="uid://col0mdiiysc8x" path="res://Scenes/UI/buttonTheme.tres" id="3_5e5mu"]
[ext_resource type="Texture2D" uid="uid://bffkyuyqo83at" path="res://Scenes/UI/buttons.tres" id="4_bim6j"]
[ext_resource type="TileSet" uid="uid://jniiomlp1d41" path="res://Art/VillageProps/VillageGroundTileSet.tres" id="4_hmu8t"]

[node name="Menu" type="Control" node_paths=PackedStringArray("current")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2438t")
current = NodePath("MainMenu")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="TileMap" type="Node2D" parent="Control"]

[node name="TileMapLayer" type="TileMapLayer" parent="Control/TileMap"]
tile_map_data = PackedByteArray("AAD0//X/AAAAAAAAAAD0//b/AAAKAAYAAAD0//f/AAAKAAYAAAD0//j/AAAKAAYAAAD0//n/AAAKAAYAAAD0//r/AAAKAAYAAAD0//v/AAAKAAYAAAD0//z/AAAKAAYAAAD0//3/AAAKAAYAAAD0//7/AAAKAAYAAAD0////AAAKAAYAAAD0/wAAAAAKAAYAAAD0/wEAAAAKAAYAAAD0/wIAAAAKAAYAAAD0/wMAAAAKAAYAAAD0/wQAAAAKAAYAAAD0/wUAAAAKAAYAAAD0/wYAAAAKAAYAAAD0/wcAAAAKAAYAAAD0/wgAAAAKAAYAAAD0/wkAAAAAAAIAAAD1//X/AAAMAAMAAAD1//b/AAAKAAgAAAD1//f/AAAKAAgAAAD1//j/AAAKAAgAAAD1//n/AAAKAAgAAAD1//r/AAAKAAgAAAD1//v/AAAKAAgAAAD1//z/AAAKAAgAAAD1//3/AAAKAAgAAAD1//7/AAAKAAgAAAD1////AAAKAAgAAAD1/wAAAAAKAAgAAAD1/wEAAAAKAAgAAAD1/wIAAAAKAAgAAAD1/wMAAAAKAAgAAAD1/wQAAAAKAAgAAAD1/wUAAAAKAAgAAAD1/wYAAAAKAAgAAAD1/wcAAAAKAAgAAAD1/wgAAAAKAAgAAAD1/wkAAAAMAAkAAAD2//P/AwAbAAcAAAD2//X/AAAMAAMAAAD2//b/AAAKAAgAAAD2//f/AAAKAAgAAAD2//j/AAAKAAgAAAD2//n/AAAKAAgAAAD2//r/AAAKAAgAAAD2//v/AAAKAAgAAAD2//z/AAAKAAgAAAD2//3/AAAKAAgAAAD2//7/AAAKAAgAAAD2////AAAKAAgAAAD2/wAAAAAKAAgAAAD2/wEAAAAKAAgAAAD2/wIAAAAKAAgAAAD2/wMAAAAKAAgAAAD2/wQAAAAKAAgAAAD2/wUAAAAKAAgAAAD2/wYAAAAKAAgAAAD2/wcAAAAKAAgAAAD2/wgAAAAKAAgAAAD2/wkAAAAMAAkAAAD3//P/AwAcAAcAAAD3//X/AAAMAAMAAAD3//b/AAAKAAgAAAD3//f/AAAKAAgAAAD3//j/AAAKAAgAAAD3//n/AAAKAAgAAAD3//r/AAAKAAgAAAD3//v/AAAKAAgAAAD3//z/AAAKAAgAAAD3//3/AAAKAAgAAAD3//7/AAAKAAgAAAD3////AAAKAAgAAAD3/wAAAAAKAAgAAAD3/wEAAAAKAAgAAAD3/wIAAAAKAAgAAAD3/wMAAAAKAAgAAAD3/wQAAAAKAAgAAAD3/wUAAAAKAAgAAAD3/wYAAAAKAAgAAAD3/wcAAAAKAAgAAAD3/wgAAAAKAAgAAAD3/wkAAAAMAAkAAAD4//P/AwAdAAcAAAD4//X/AAAMAAMAAAD4//b/AAAKAAgAAAD4//f/AAAKAAgAAAD4//j/AAAKAAgAAAD4//n/AAAKAAgAAAD4//r/AAAKAAgAAAD4//v/AAAKAAgAAAD4//z/AAAKAAgAAAD4//3/AAAKAAgAAAD4//7/AAAKAAgAAAD4////AAAKAAgAAAD4/wAAAAAKAAgAAAD4/wEAAAAKAAgAAAD4/wIAAAAKAAgAAAD4/wMAAAAKAAgAAAD4/wQAAAAKAAgAAAD4/wUAAAAKAAgAAAD4/wYAAAAKAAgAAAD4/wcAAAAKAAgAAAD4/wgAAAAKAAgAAAD4/wkAAAAMAAkAAAD5//X/AAAMAAMAAAD5//b/AAAKAAgAAAD5//f/AAAKAAgAAAD5//j/AAAKAAgAAAD5//n/AAAKAAgAAAD5//r/AAAKAAgAAAD5//v/AAAKAAgAAAD5//z/AAAKAAgAAAD5//3/AAAKAAgAAAD5//7/AAAKAAgAAAD5////AAAKAAgAAAD5/wAAAAAKAAgAAAD5/wEAAAAKAAgAAAD5/wIAAAAKAAgAAAD5/wMAAAAKAAgAAAD5/wQAAAAKAAgAAAD5/wUAAAAKAAgAAAD5/wYAAAAKAAgAAAD5/wcAAAAKAAgAAAD5/wgAAAAKAAgAAAD5/wkAAAAMAAkAAAD6//X/AAAMAAMAAAD6//b/AAAKAAgAAAD6//f/AAAKAAgAAAD6//j/AAAKAAgAAAD6//n/AAAKAAgAAAD6//r/AAAKAAgAAAD6//v/AAAKAAgAAAD6//z/AAAKAAgAAAD6//3/AAAKAAgAAAD6//7/AAAKAAgAAAD6////AAAKAAgAAAD6/wAAAAAKAAgAAAD6/wEAAAAKAAgAAAD6/wIAAAAKAAgAAAD6/wMAAAAKAAgAAAD6/wQAAAAKAAgAAAD6/wUAAAAKAAgAAAD6/wYAAAAKAAgAAAD6/wcAAAAKAAgAAAD6/wgAAAAKAAgAAAD6/wkAAAAMAAkAAAD7//X/AAAMAAMAAAD7//b/AAAKAAgAAAD7//f/AAAKAAgAAAD7//j/AAAKAAgAAAD7//n/AAAKAAgAAAD7//r/AAAKAAgAAAD7//v/AAAKAAgAAAD7//z/AAAKAAgAAAD7//3/AAAKAAgAAAD7//7/AAAKAAgAAAD7////AAAKAAgAAAD7/wAAAAAKAAgAAAD7/wEAAAAKAAgAAAD7/wIAAAAKAAgAAAD7/wMAAAAKAAgAAAD7/wQAAAAKAAgAAAD7/wUAAAAKAAgAAAD7/wYAAAAKAAgAAAD7/wcAAAAKAAgAAAD7/wgAAAAKAAgAAAD7/wkAAAAMAAkAAAD8//X/AAAMAAMAAAD8//b/AAAKAAgAAAD8//f/AAAKAAgAAAD8//j/AAAKAAgAAAD8//n/AAAKAAgAAAD8//r/AAAKAAgAAAD8//v/AAAKAAgAAAD8//z/AAAKAAgAAAD8//3/AAAKAAgAAAD8//7/AAAKAAgAAAD8////AAAKAAgAAAD8/wAAAAAKAAgAAAD8/wEAAAAKAAgAAAD8/wIAAAAKAAgAAAD8/wMAAAAKAAgAAAD8/wQAAAAKAAgAAAD8/wUAAAAKAAgAAAD8/wYAAAAKAAgAAAD8/wcAAAAKAAgAAAD8/wgAAAAKAAgAAAD8/wkAAAAMAAkAAAD9//X/AAAMAAMAAAD9//b/AAAKAAgAAAD9//f/AAAKAAgAAAD9//j/AAAKAAgAAAD9//n/AAAKAAgAAAD9//r/AAAKAAgAAAD9//v/AAAKAAgAAAD9//z/AAAKAAgAAAD9//3/AAAKAAgAAAD9//7/AAAKAAgAAAD9////AAAKAAgAAAD9/wAAAAAKAAgAAAD9/wEAAAAKAAgAAAD9/wIAAAAKAAgAAAD9/wMAAAAKAAgAAAD9/wQAAAAKAAgAAAD9/wUAAAAKAAgAAAD9/wYAAAAKAAgAAAD9/wcAAAAKAAgAAAD9/wgAAAAKAAgAAAD9/wkAAAAMAAkAAAD+//X/AAAMAAMAAAD+//b/AAAKAAgAAAD+//f/AAAKAAgAAAD+//j/AAAKAAgAAAD+//n/AAAKAAgAAAD+//r/AAAKAAgAAAD+//v/AAAKAAgAAAD+//z/AAAKAAgAAAD+//3/AAAKAAgAAAD+//7/AAAKAAgAAAD+////AAAKAAgAAAD+/wAAAAAKAAgAAAD+/wEAAAAKAAgAAAD+/wIAAAAKAAgAAAD+/wMAAAAKAAgAAAD+/wQAAAAKAAgAAAD+/wUAAAAKAAgAAAD+/wYAAAAKAAgAAAD+/wcAAAAKAAgAAAD+/wgAAAAKAAgAAAD+/wkAAAAMAAkAAAD///P/AwAYAAcAAAD///X/AAAMAAMAAAD///b/AAAKAAgAAAD///f/AAAKAAgAAAD///j/AAAKAAgAAAD///n/AAAKAAgAAAD///r/AAAKAAgAAAD///v/AAAKAAgAAAD///z/AAAKAAgAAAD///3/AAAKAAgAAAD///7/AAAKAAgAAAD/////AAAKAAgAAAD//wAAAAAKAAgAAAD//wEAAAAKAAgAAAD//wIAAAAKAAgAAAD//wMAAAAKAAgAAAD//wQAAAAKAAgAAAD//wUAAAAKAAgAAAD//wYAAAAKAAgAAAD//wcAAAAKAAgAAAD//wgAAAAKAAgAAAD//wkAAAAMAAkAAAAAAPX/AAAMAAMAAAAAAPb/AAAKAAgAAAAAAPf/AAAKAAgAAAAAAPj/AAAKAAgAAAAAAPn/AAAKAAgAAAAAAPr/AAAKAAgAAAAAAPv/AAAKAAgAAAAAAPz/AAAKAAgAAAAAAP3/AAAKAAgAAAAAAP7/AAAKAAgAAAAAAP//AAAKAAgAAAAAAAAAAAAKAAgAAAAAAAEAAAAKAAgAAAAAAAIAAAAKAAgAAAAAAAMAAAAKAAgAAAAAAAQAAAAKAAgAAAAAAAUAAAAKAAgAAAAAAAYAAAAKAAgAAAAAAAcAAAAKAAgAAAAAAAgAAAAKAAgAAAAAAAkAAAAMAAkAAAABAPX/AAAMAAMAAAABAPb/AAAKAAgAAAABAPf/AAAKAAgAAAABAPj/AAAKAAgAAAABAPn/AAAKAAgAAAABAPr/AAAKAAgAAAABAPv/AAAKAAgAAAABAPz/AAAKAAgAAAABAP3/AAAKAAgAAAABAP7/AAAKAAgAAAABAP//AAAKAAgAAAABAAAAAAAKAAgAAAABAAEAAAAKAAgAAAABAAIAAAAKAAgAAAABAAMAAAAKAAgAAAABAAQAAAAKAAgAAAABAAUAAAAKAAgAAAABAAYAAAAKAAgAAAABAAcAAAAKAAgAAAABAAgAAAAKAAgAAAABAAkAAAAMAAkAAAACAPX/AAAMAAMAAAACAPb/AAAKAAgAAAACAPf/AAAKAAgAAAACAPj/AAAKAAgAAAACAPn/AAAKAAgAAAACAPr/AAAKAAgAAAACAPv/AAAKAAgAAAACAPz/AAAKAAgAAAACAP3/AAAKAAgAAAACAP7/AAAKAAgAAAACAP//AAAKAAgAAAACAAAAAAAKAAgAAAACAAEAAAAKAAgAAAACAAIAAAAKAAgAAAACAAMAAAAKAAgAAAACAAQAAAAKAAgAAAACAAUAAAAKAAgAAAACAAYAAAAKAAgAAAACAAcAAAAKAAgAAAACAAgAAAAKAAgAAAACAAkAAAAMAAkAAAADAPX/AAAMAAMAAAADAPb/AAAKAAgAAAADAPf/AAAKAAgAAAADAPj/AAAKAAgAAAADAPn/AAAKAAgAAAADAPr/AAAKAAgAAAADAPv/AAAKAAgAAAADAPz/AAAKAAgAAAADAP3/AAAKAAgAAAADAP7/AAAKAAgAAAADAP//AAAKAAgAAAADAAAAAAAKAAgAAAADAAEAAAAKAAgAAAADAAIAAAAKAAgAAAADAAMAAAAKAAgAAAADAAQAAAAKAAgAAAADAAUAAAAKAAgAAAADAAYAAAAKAAgAAAADAAcAAAAKAAgAAAADAAgAAAAKAAgAAAADAAkAAAAMAAkAAAAEAPL/AwAVAA4AAAAEAPX/AAAMAAMAAAAEAPb/AAAKAAgAAAAEAPf/AAAKAAgAAAAEAPj/AAAKAAgAAAAEAPn/AAAKAAgAAAAEAPr/AAAKAAgAAAAEAPv/AAAKAAgAAAAEAPz/AAAKAAgAAAAEAP3/AAAKAAgAAAAEAP7/AAAKAAgAAAAEAP//AAAKAAgAAAAEAAAAAAAKAAgAAAAEAAEAAAAKAAgAAAAEAAIAAAAKAAgAAAAEAAMAAAAKAAgAAAAEAAQAAAAKAAgAAAAEAAUAAAAKAAgAAAAEAAYAAAAKAAgAAAAEAAcAAAAKAAgAAAAEAAgAAAAKAAgAAAAEAAkAAAAMAAkAAAAFAPX/AAAMAAMAAAAFAPb/AAAKAAgAAAAFAPf/AAAKAAgAAAAFAPj/AAAKAAgAAAAFAPn/AAAKAAgAAAAFAPr/AAAKAAgAAAAFAPv/AAAKAAgAAAAFAPz/AAAKAAgAAAAFAP3/AAAKAAgAAAAFAP7/AAAKAAgAAAAFAP//AAAKAAgAAAAFAAAAAAAKAAgAAAAFAAEAAAAKAAgAAAAFAAIAAAAKAAgAAAAFAAMAAAAKAAgAAAAFAAQAAAAKAAgAAAAFAAUAAAAKAAgAAAAFAAYAAAAKAAgAAAAFAAcAAAAKAAgAAAAFAAgAAAAKAAgAAAAFAAkAAAAMAAkAAAAGAPX/AAAMAAMAAAAGAPb/AAAKAAgAAAAGAPf/AAAKAAgAAAAGAPj/AAAKAAgAAAAGAPn/AAAKAAgAAAAGAPr/AAAKAAgAAAAGAPv/AAAKAAgAAAAGAPz/AAAKAAgAAAAGAP3/AAAKAAgAAAAGAP7/AAAKAAgAAAAGAP//AAAKAAgAAAAGAAAAAAAKAAgAAAAGAAEAAAAKAAgAAAAGAAIAAAAKAAgAAAAGAAMAAAAKAAgAAAAGAAQAAAAKAAgAAAAGAAUAAAAKAAgAAAAGAAYAAAAKAAgAAAAGAAcAAAAKAAgAAAAGAAgAAAAKAAgAAAAGAAkAAAAMAAkAAAAHAPX/AAAMAAMAAAAHAPb/AAAKAAgAAAAHAPf/AAAKAAgAAAAHAPj/AAAKAAgAAAAHAPn/AAAKAAgAAAAHAPr/AAAKAAgAAAAHAPv/AAAKAAgAAAAHAPz/AAAKAAgAAAAHAP3/AAAKAAgAAAAHAP7/AAAKAAgAAAAHAP//AAAKAAgAAAAHAAAAAAAKAAgAAAAHAAEAAAAKAAgAAAAHAAIAAAAKAAgAAAAHAAMAAAAKAAgAAAAHAAQAAAAKAAgAAAAHAAUAAAAKAAgAAAAHAAYAAAAKAAgAAAAHAAcAAAAKAAgAAAAHAAgAAAAKAAgAAAAHAAkAAAAMAAkAAAAIAPX/AAAMAAMAAAAIAPb/AAAKAAgAAAAIAPf/AAAKAAgAAAAIAPj/AAAKAAgAAAAIAPn/AAAKAAgAAAAIAPr/AAAKAAgAAAAIAPv/AAAKAAgAAAAIAPz/AAAKAAgAAAAIAP3/AAAKAAgAAAAIAP7/AAAKAAgAAAAIAP//AAAKAAgAAAAIAAAAAAAKAAgAAAAIAAEAAAAKAAgAAAAIAAIAAAAKAAgAAAAIAAMAAAAKAAgAAAAIAAQAAAAKAAgAAAAIAAUAAAAKAAgAAAAIAAYAAAAKAAgAAAAIAAcAAAAKAAgAAAAIAAgAAAAKAAgAAAAIAAkAAAAMAAkAAAAJAPL/AwAaAA4AAAAJAPX/AAAMAAMAAAAJAPb/AAAKAAgAAAAJAPf/AAAKAAgAAAAJAPj/AAAKAAgAAAAJAPn/AAAKAAgAAAAJAPr/AAAKAAgAAAAJAPv/AAAKAAgAAAAJAPz/AAAKAAgAAAAJAP3/AAAKAAgAAAAJAP7/AAAKAAgAAAAJAP//AAAKAAgAAAAJAAAAAAAKAAgAAAAJAAEAAAAKAAgAAAAJAAIAAAAKAAgAAAAJAAMAAAAKAAgAAAAJAAQAAAAKAAgAAAAJAAUAAAAKAAgAAAAJAAYAAAAKAAgAAAAJAAcAAAAKAAgAAAAJAAgAAAAKAAgAAAAJAAkAAAAMAAkAAAAKAPX/AAAMAAMAAAAKAPb/AAAKAAgAAAAKAPf/AAAKAAgAAAAKAPj/AAAKAAgAAAAKAPn/AAAKAAgAAAAKAPr/AAAKAAgAAAAKAPv/AAAKAAgAAAAKAPz/AAAKAAgAAAAKAP3/AAAKAAgAAAAKAP7/AAAKAAgAAAAKAP//AAAKAAgAAAAKAAAAAAAKAAgAAAAKAAEAAAAKAAgAAAAKAAIAAAAKAAgAAAAKAAMAAAAKAAgAAAAKAAQAAAAKAAgAAAAKAAUAAAAKAAgAAAAKAAYAAAAKAAgAAAAKAAcAAAAKAAgAAAAKAAgAAAAKAAgAAAAKAAkAAAAMAAkAAAALAPX/AAAMAAMAAAALAPb/AAAKAAgAAAALAPf/AAAKAAgAAAALAPj/AAAKAAgAAAALAPn/AAAKAAgAAAALAPr/AAAKAAgAAAALAPv/AAAKAAgAAAALAPz/AAAKAAgAAAALAP3/AAAKAAgAAAALAP7/AAAKAAgAAAALAP//AAAKAAgAAAALAAAAAAAKAAgAAAALAAEAAAAKAAgAAAALAAIAAAAKAAgAAAALAAMAAAAKAAgAAAALAAQAAAAKAAgAAAALAAUAAAAKAAgAAAALAAYAAAAKAAgAAAALAAcAAAAKAAgAAAALAAgAAAAKAAgAAAALAAkAAAAMAAkAAAAMAPX/AAACAAAAAAAMAPb/AAANAAgAAAAMAPf/AAANAAgAAAAMAPj/AAANAAgAAAAMAPn/AAANAAgAAAAMAPr/AAANAAgAAAAMAPv/AAANAAgAAAAMAPz/AAANAAgAAAAMAP3/AAANAAgAAAAMAP7/AAANAAgAAAAMAP//AAANAAgAAAAMAAAAAAANAAgAAAAMAAEAAAANAAgAAAAMAAIAAAANAAgAAAAMAAMAAAANAAgAAAAMAAQAAAANAAgAAAAMAAUAAAANAAgAAAAMAAYAAAANAAgAAAAMAAcAAAANAAgAAAAMAAgAAAANAAgAAAAMAAkAAAACAAIAAADz/wMAAwAIAAEAAADz/wQAAwAJAAEAAADz/wUAAwAKAAEAAAAFAAoAAwAbAAsAAAD5/woAAwAZAAsAAAD3/woAAwAdAAsAAAAAAAoAAwAdAAsAAAANAAYAAwAZAAUAAADy//n/AwALABIAAAANAP7/AwATAAMAAAANAP3/AwASAAMAAAA=")
tile_set = ExtResource("4_hmu8t")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gty37")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -270.0
offset_right = 160.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60
alignment = 1

[node name="Play" type="Control" parent="MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MainMenu/VBoxContainer/Play"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -50.0
offset_right = 160.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_bim6j")

[node name="PlayButton" type="Button" parent="MainMenu/VBoxContainer/Play"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_5e5mu")
text = "Play"

[node name="Credits" type="Control" parent="MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MainMenu/VBoxContainer/Credits"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -50.0
offset_right = 160.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_bim6j")

[node name="CreditsButton" type="Button" parent="MainMenu/VBoxContainer/Credits"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_5e5mu")
text = "Credits"

[node name="Quit" type="Control" parent="MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MainMenu/VBoxContainer/Quit"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -50.0
offset_right = 160.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_bim6j")

[node name="QuitButton" type="Button" parent="MainMenu/VBoxContainer/Quit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_5e5mu")
text = "Quit"

[node name="Credits" parent="." instance=ExtResource("2_gforu")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MainMenu/VBoxContainer/Play/PlayButton" to="MainMenu" method="_on_play_button_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Credits/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Quit/QuitButton" to="MainMenu" method="_on_quit_button_pressed"]
[connection signal="pressed" from="Credits/TextureRect/BackButton" to="." method="_on_back_button_pressed"]

[editable path="Credits"]
